k8s/netpol-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kantyna-postgres-ingress
  namespace: robert
  labels:
    app.kubernetes.io/part-of: kantyna
    aiops/lab: lab04
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/instance: kantyna
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: orders-api
              app.kubernetes.io/instance: kantyna
      ports:
        - protocol: TCP
          port: 5432
